--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Joël Traina | Inspiré par les jeux vidéo</p>
+        <p>&copy; 2024 Joël Traina </p>
     </footer>
 </body>
 </html>
