--- a/index.html
+++ b/index.html
@@ -1,70 +1,102 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio de Joël Traina, développeur passionné par les jeux vidéo et la programmation">
-    <title>Portfolio - Joël Traina</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <div class="header-container">
-            <h1 class="glitch">Joël Traina</h1>
-            <p>Développeur passionné par les technologies et les jeux vidéo</p>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+/* Styles de base */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    color: #333;
+}
 
-    <main>
-        <section id="about" class="section">
-            <h2>À propos de moi</h2>
-            <p>Depuis mon enfance, l'informatique et les jeux vidéo m'ont toujours fasciné. Je combine cette passion avec mes compétences en programmation pour créer des projets uniques.</p>
-            <p>Mon expertise couvre Python, Arduino, HTML/CSS, et la modélisation 3D pour des projets variés.</p>
-        </section>
+header {
+    text-align: center;
+    padding: 20px;
+    background: linear-gradient(to right, #4CAF50, #8BC34A);
+    color: white;
+}
 
-        <section id="projects" class="section">
-            <h2>Mes Projets</h2>
-            <div class="projects-grid">
-                <div class="project-card">
-                    <h3>Tic Tac Toe</h3>
-                    <p>Jeu classique développé en Python.</p>
-                    <a href="#" class="btn">Voir le projet</a>
-                </div>
-                <div class="project-card">
-                    <h3>Site de Fans</h3>
-                    <p>Site web dédié à une communauté de fans, réalisé en HTML et CSS.</p>
-                    <a href="#" class="btn">Voir le projet</a>
-                </div>
-                <div class="project-card">
-                    <h3>Robot Bong</h3>
-                    <p>Robot autonome capable de lancer des balles.</p>
-                    <a href="#" class="btn">Voir le projet</a>
-                </div>
-                <div class="project-card">
-                    <h3>Compétition 3D</h3>
-                    <p>Simulation 3D d'un robot participant à une compétition.</p>
-                    <a href="#" class="btn">Voir le projet</a>
-                </div>
-            </div>
-        </section>
+header h1 {
+    font-size: 2.5rem;
+}
 
-        <section id="contact" class="section">
-            <h2>Contactez-moi</h2>
-            <p>Je suis disponible pour des collaborations ou des opportunités professionnelles.</p>
-            <p><a href="https://www.linkedin.com/in/veron-messina-b94638251/" target="_blank" class="btn">LinkedIn</a></p>
-            <p><a href="veromessij@gmail.com" class="btn">Envoyer un Email</a></p>
-        </section>
-    </main>
+nav {
+    background: #444;
+    color: white;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 10px 0;
+}
 
-    <footer>
-        <p>&copy; 2024 Joël Traina </p>
-    </footer>
-</body>
-</html>
+nav a {
+    color: white;
+    text-decoration: none;
+    padding: 5px 10px;
+}
+
+nav a:hover {
+    background: #666;
+    border-radius: 5px;
+}
+
+section {
+    padding: 20px;
+    max-width: 900px;
+    margin: 20px auto;
+}
+
+h2 {
+    border-bottom: 2px solid #4CAF50;
+    padding-bottom: 5px;
+}
+
+.skills-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+}
+
+.skill {
+    background: #4CAF50;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.project {
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background: #f9f9f9;
+}
+
+.project h3 {
+    margin-top: 0;
+    color: #4CAF50;
+}
+
+footer {
+    text-align: center;
+    padding: 10px;
+    background: #222;
+    color: white;
+}
+
+/* Styles responsive */
+@media (max-width: 768px) {
+    header h1 {
+        font-size: 1.8rem;
+    }
+
+    nav {
+        flex-wrap: wrap;
+    }
+
+    .skills-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
